--- a/app.json
+++ b/app.json
@@ -17,14 +17,25 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.lean1123.meatscmappretailor"
+      "package": "com.lean1123.meatscmappretailor",
+      "permissions": [
+        "android.permission.CAMERA"
+      ]
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-secure-store", "expo-barcode-scanner"]
+    "plugins": [
+      "expo-secure-store",
+      "expo-barcode-scanner"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "9b9b3587-46aa-466e-b9b4-24146ad95d29"
+      }
+    }
   },
   "plugins": [
     "expo-router",
