fix: downgrade package versions for compatibility
- Downgraded "@react-native-picker/picker" from "^2.11.2" to "2.11.1"
- Downgraded "@react-navigation/native" from "^7.1.17" to "^7.1.6"
- Downgraded "react-native-maps" from "^1.26.9" to "1.20.1"
- Downgraded "react-native-safe-area-context" from "^5.4.0" to "5.4.0"

feat: add fetchAssetByFacilityID API call

- Implemented fetchAssetByFacilityID in retailorApi.ts to retrieve assets by facility ID.

refactor: update shipment deliver function to accept any data type

- Changed the deliver function in shipmentApi.ts to accept a more generic data type.

chore: clean up imports and improve QR code scanning logic

- Removed unused imports and added useFocusEffect to reset scanned state in qrCode.tsx.
- Enhanced QR code scanning logic to handle parsed data and confirm shipment delivery.

fix: update asset detail fetching logic

- Removed placeholder comment for fetching batch details in asset detail page.

feat: implement asset fetching with API call

- Added asset fetching logic in asset index page and created Asset type definition.

fix: update shipment detail page to use MapView

- Replaced MapWithRoute component with MapView in shipment detail page.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
-apply from: file("../../node_modules/react-native/react.gradle")
+
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
@@ -95,6 +95,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
     signingConfigs {
         debug {
@@ -121,6 +122,14 @@ android {
     packagingOptions {
         jniLibs {
             useLegacyPackaging (findProperty('expo.useLegacyPackaging')?.toBoolean() ?: false)
+        }
+        packagingOptions {
+            pickFirst '**/lib/**/libc++_shared.so'
+            pickFirst '**/lib/**/libjsi.so'
+            pickFirst '**/lib/**/libreactnativejni.so'
+            pickFirst '**/lib/**/libhermes.so'
+            pickFirst '**/lib/**/libglog_init.so'
+            pickFirst '**/lib/**/libfolly_json.so'
         }
     }
     androidResources {
