feat: Add SalesSection and ShelfUpdateSection components for unit sales and shelf management
- Implemented SalesSection for handling sales transactions, including quantity selection, customer info, and notes.
- Added ShelfUpdateSection for updating unit shelf location and temperature with validation.
- Created UnitDetailHeader for displaying unit details and status.
- Developed UnitHistoryTimeline to show the history of unit actions with icons and timestamps.
- Introduced UnitInfoCard to present detailed information about the unit, including expiry date and storage conditions.
- Updated types and utilities to support new features, including SaleTransaction and ShelfUpdateData interfaces.
- Added genID helper function for generating unique IDs.
- Enhanced asset selection logic in useAssetSelector with async actions for fetching and updating assets.

--- a/app.json
+++ b/app.json
@@ -18,19 +18,14 @@
       },
       "edgeToEdgeEnabled": true,
       "package": "com.lean1123.meatscmappretailor",
-      "permissions": [
-        "android.permission.CAMERA"
-      ]
+      "permissions": ["android.permission.CAMERA"]
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-secure-store",
-      "expo-barcode-scanner"
-    ],
+    "plugins": ["expo-secure-store", "expo-barcode-scanner"],
     "extra": {
       "eas": {
         "projectId": "9b9b3587-46aa-466e-b9b4-24146ad95d29"
@@ -39,6 +34,7 @@
   },
   "plugins": [
     "expo-router",
+    "react-native-maps",
     [
       "expo-splash-screen",
       {
